# gnome-randr-rust

./: Cargo.toml  README.md
src/: display_config.rs  display_config_raw.rs  lib.rs  main.rs
src/cli/: mod.rs  query.rs
src/cli/adjust/: mod.rs
src/cli/modify/: mod.rs
src/cli/modify/actions/: displace.rs  mod.rs  mode.rs  primary.rs  property.rs  rotation.rs  scale.rs
src/display_config/: logical_monitor.rs  mod.rs  physical_monitor.rs  proxied_methods.rs  raw.rs  resources.rs
src/display_config/models/: crtc.rs  mod.rs  output.rs  physical_monitor.rs
src/display_config/monitor_models/: mod.rs  monitor.rs  transform.rs
