[package]
name = "gnome-randr"
edition = "2018"
version = "0.1.0"
authors = ["savedbythezsh <savedbythezsh@gmail.com>"]
license = "MIT"
description = "A reimplementation of xrandr for Gnome on Wayland"
readme = "README.md"
homepage = "https://github.com/maxwellainatchi/gnome-xrandr-rust"
repository = "https://github.com/maxwellainatchi/gnome-xrandr-rust"
keywords = ["cli", "displays", "xrandr", "gnome", "wayland"]
categories = ["command-line-utilities", "config"]

[dependencies]
dbus = "0.9.5"
bitflags = "1.3.2"
structopt = "0.3.23"
